# BioSim_G13_Elinor_Lisa

./: .gitignore  README.md  setup.cfg  test.py
[biosim]/src/biosim/: __init__.py
doc/: Makefile  conf.py  index.rst  make.bat
doc/source/: conf.py  index.rst
examples/: check_sim.py
src/biosim/: animals.py  ecology.py  geography.py  landscape.py  simulation.py
tests/: test_animals.py  test_ecology.py  test_landscape.py  test_simulation.py
